Fixed thumbnails being stretched badly.
also a lil code cleanup, and made the inline media text be
font-smoothing: none; This way the text won’t look blurry if the image
was downscaled in subpixels.

--- a/design.css
+++ b/design.css
@@ -749,10 +749,6 @@ body .inline_nickname[colornumber='30'] {
 
 /* Textual-Inline-Media tweaks */
 
-.inlineMediaCell {
-    display: block;
-}
-
 video {
     margin-left: 46px;
     padding: 2px;
@@ -781,6 +777,7 @@ video {
 
 .inline_media_website_title,
 .inline_media_youtube_title {
+	-webkit-font-smoothing: none;
     font-weight: 400 !important;
     color: #FFBD59 !important;
 	text-indent: 0px !important;
@@ -789,6 +786,7 @@ video {
 }
 
 .inline_media_wiki_title {
+	-webkit-font-smoothing: none;
     font-size: 16px !important;
     color: #FFBD59 !important;
     font-family: "FixedsysExcelsiorIIIb-L2" !important;
@@ -799,15 +797,16 @@ video {
 
 .inline_media_website_desc,
 .inline_media_wiki_desc p {
+	-webkit-font-smoothing: none;
     color: #aaa !important;
     padding: 0px 16px 12px 16px;
     text-indent: 0px !important;
     margin-left: 0px !important;
 }
 
-
 .inline_media_youtube_author,
 .inline_media_youtube_views {
+	-webkit-font-smoothing: none;
     color: #aaa !important;
     font-size: 16px !important;
 	padding: 0px 16px 0px 16px;
@@ -819,11 +818,12 @@ video {
     max-width: 250px !important;
     max-height: 250px !important;
     margin-right: 0px !important;
+	margin-bottom: auto;
 }
 
 .inline_media_youtube_thumbnail > img {
-    max-width: 249px !important;
-    max-height: none !important;
+    max-width: 250px !important;
+    max-height: 140px !important;
 	padding-left: 46px;
 }
 
